Changed the filtering logic. Added a script to save the user location in the session when the user starts the application, the geolocation is used in the DistanceCalculator for filtering function in the salon service. Changed the UI a bit, added 2 forms in the salon view. **Note City filtering needs to be done.